--- a/scssak-fe/src/assets/styles/ArticleList.css
+++ b/scssak-fe/src/assets/styles/ArticleList.css
@@ -18,10 +18,17 @@
 
 .thumbnail {
   flex-shrink: 0;
-  width: 80px;
+  width: 90px;
   height: 60px;
   background-color: #f0f0f0;
   border-radius: 8px;
+  display: flex;
+  justify-content: center;
+}
+
+.thumbnail img {
+  width: 100%;
+  object-fit: contain;
 }
 
 .thumbnail-placeholder {
