--- a/scssak-fe/src/index.css
+++ b/scssak-fe/src/index.css
@@ -1,7 +1,35 @@
+@font-face {
+  font-family: 'GmarketSans';
+  font-weight: 400; /* normal은 400 */
+  src: url('./assets/fonts/GmarketSansTTFMedium.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'GmarketSans';
+  font-weight: 700; /* bold는 700 */
+  src: url('./assets/fonts/GmarketSansTTFBold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'GmarketSans';
+  font-weight: 300; /* lighter는 300 */
+  src: url('./assets/fonts/GmarketSansTTFLight.ttf') format('truetype');
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family:
+    'GmarketSans',
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    'Roboto',
+    'Oxygen',
+    'Ubuntu',
+    'Cantarell',
+    'Fira Sans',
+    'Droid Sans',
+    'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
