--- a/scssak-fe/src/index.css
+++ b/scssak-fe/src/index.css
@@ -16,6 +16,11 @@
   src: url('./assets/fonts/GmarketSansTTFLight.ttf') format('truetype');
 }
 
+@font-face {
+  font-family: 'YeongdeokSea';
+  src: url('./assets/fonts/Yeongdeok\ Sea.ttf') format('truetype');
+}
+
 body {
   margin: 0;
   font-family:
