--- a/scssak-fe/src/styles/components/common/Navbar.css
+++ b/scssak-fe/src/styles/components/common/Navbar.css
@@ -1,46 +1,50 @@
 .navbar {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: #ffffff;
-    border-top: 1px solid #ddd;
-    box-shadow: 0 -1px 6px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
-  }
-  
-  .nav-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 12px;
-    color: #555;
-    cursor: pointer;
-  }
-  
-  .nav-item img {
-    width: 24px;
-    height: 24px;
-    margin-bottom: 4px;
-  }
-  
-  .nav-item span {
-    font-size: 12px;
-    color: #333;
-  }
-  
-  .nav-item:hover {
-    color: #007bff;
-  }
-  
-  .navbar img {
-    filter: grayscale(100%);
-  }
-  
-  .nav-item:hover img {
-    filter: none;
-  }
-  
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #ffffff;
+  border-top: 1px solid #ddd;
+  box-shadow: 0 -1px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+
+.nav-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 12px;
+  color: #555;
+  cursor: pointer;
+}
+
+.nav-item img {
+  width: 24px;
+  height: 24px;
+  margin-bottom: 4px;
+}
+
+.nav-item span {
+  font-size: 12px;
+  color: #333;
+}
+
+.nav-item:hover {
+  color: #007bff;
+}
+
+.navbar img {
+  filter: grayscale(100%);
+}
+
+.navbar img.active {
+  filter: none;
+}
+
+.nav-item:hover img {
+  filter: none;
+}
