--- a/scssak-fe/src/styles/pages/ArticleBoardPage.css
+++ b/scssak-fe/src/styles/pages/ArticleBoardPage.css
@@ -1,6 +1,6 @@
 .board-page {
   padding: 16px;
-  max-width: 500px;
+  max-width: 100%;
   margin: 0 auto;
   position: relative;
 }
@@ -109,7 +109,6 @@
 .write-button {
   position: fixed;
   bottom: 16px;
-  right: 16px;
   padding: 12px 24px;
   border-radius: 24px;
   background-color: #0066ff;
