--- a/scssak-fe/src/styles/pages/ArticleDetailPage.css
+++ b/scssak-fe/src/styles/pages/ArticleDetailPage.css
@@ -34,7 +34,7 @@
 .article-info {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   font-size: 14px;
   color: gray;
   text-align: center;
