--- a/scssak-fe/src/styles/components/common/Navbar.css
+++ b/scssak-fe/src/styles/components/common/Navbar.css
@@ -3,7 +3,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 60px;
+  height: 68px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -23,8 +23,8 @@
 }
 
 .nav-item img {
-  width: 24px;
-  height: 24px;
+  object-fit: contain;
+  height: 45px;
   margin-bottom: 4px;
 }
 
