--- a/scssak-fe/src/styles/components/mailbox/MailList.module.css
+++ b/scssak-fe/src/styles/components/mailbox/MailList.module.css
@@ -1,13 +1,12 @@
 .container {
-  padding-bottom: 5rem;
-
-  font-family: 'YeongdeokSea';
+  height: 78vh;
+  overflow: scroll;
 }
 
 .containerMail {
-  height: 8rem;
+  min-height: 8rem;
 
-  padding: 0.5rem 1rem;
+  padding: 1rem;
   margin: 1rem 0.5rem;
 
   position: relative;
@@ -19,6 +18,7 @@
   border-radius: 10px;
 
   text-align: start;
+  font-family: 'YeongdeokSea';
 
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
 }
@@ -37,15 +37,11 @@
 
 .textMailContent {
   margin: auto 0;
-  padding: 1rem 0;
+  padding: 1rem 0 0.5rem;
 
   font-size: 1.1rem;
 
   overflow: scroll;
-}
-
-.textMailContent::-webkit-scrollbar {
-  display: none;
 }
 
 .textMailCreatedAt {
