--- a/scssak-fe/src/styles/components/mailboxList/MailboxList.module.css
+++ b/scssak-fe/src/styles/components/mailboxList/MailboxList.module.css
@@ -1,8 +1,8 @@
 .container {
+  padding: 0 2rem;
+
   display: grid;
   grid-template-columns: auto auto auto;
-
-  margin-bottom: 4rem;
 }
 
 .containerMailbox {
@@ -10,12 +10,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
-  padding: 1rem;
 }
 
 .imgMailbox {
-  width: 4rem;
+  width: 5rem;
   object-fit: contain;
 }
 
