--- a/scssak-fe/src/styles/pages/LoginPage.module.css
+++ b/scssak-fe/src/styles/pages/LoginPage.module.css
@@ -1,22 +1,15 @@
 .container {
-  max-width: 480px; /* 모바일 웹앱에 맞춘 가로폭 */
-  margin: 0 auto;
-
-  height: 100%;
-
-  position: relative;
+  min-height: 100vh;
 
   background-color: #f2f9ff;
-}
 
-.containerWithBackgroundImg {
   background-repeat: no-repeat;
   background-size: contain;
   background-position-y: bottom;
 }
 
 .containerIntroduce {
-  padding-top: 97px;
+  padding-top: 7rem;
 }
 
 .containerIntroduce > p {
@@ -26,40 +19,37 @@
 }
 
 .imgLogin {
-  height: 250px;
+  height: 15rem;
   object-fit: contain;
 
-  margin-top: 52px;
-  margin-bottom: 30px;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
 }
 
 .textBlue {
   color: #3d5fe7;
-  font-size: 22px;
+  font-size: 1.4rem;
 }
 
 .textGray {
-  color: #83aaca;
-  font-size: 20px;
+  padding-top: 0.25rem;
 
-  padding-top: 4px;
+  color: #83aaca;
+  font-size: 1.25rem;
 }
 
 .textBlack {
-  color: #040520;
-  font-size: 24px;
+  padding-top: 2rem;
 
-  padding-top: 30px;
+  color: #040520;
+  font-size: 1.5rem;
 }
 
 .textCopyright {
-  margin: 40px 0 0;
-  padding-bottom: 10px;
+  margin: 2rem 0 0;
 
   color: #ffffff;
   opacity: 0.7;
   font-size: 10px;
   font-weight: 300;
-
-  text-align: center;
 }
