--- a/scssak-fe/src/styles/pages/ArticleBoardPage.css
+++ b/scssak-fe/src/styles/pages/ArticleBoardPage.css
@@ -1,5 +1,6 @@
 .board-page {
-  padding: 16px;
+  padding: 8px;
+  box-sizing: border-box;
   max-width: 100%;
   margin: 0 auto;
   position: relative;
@@ -20,7 +21,7 @@
 /* 검색창 스타일 */
 .search-container {
   position: relative;
-  left: 20px;
+  left: 10px;
   width: 100%;
   max-width: 310px; /* 원하는 너비로 조정 */
   height: 40px; /* 높이도 이미지에 맞게 조정 */
@@ -35,6 +36,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
   border: none;
   padding-left: 15px; /* 이미지의 왼쪽 여백에 맞춰 조정 */
   font-size: 14px;
