feat: 드래그 및 우클릭 방지, css 추가 수정 241119 1635

--- a/scssak-fe/src/index.css
+++ b/scssak-fe/src/index.css
@@ -38,6 +38,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* 드래그 및 우클릭 방지 */
+  -webkit-touch-callout: none;
+  user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-user-select: none;
 }
 
 code {
