--- a/scssak-fe/src/styles/components/main/NoticeList.module.css
+++ b/scssak-fe/src/styles/components/main/NoticeList.module.css
@@ -1,9 +1,9 @@
 .container {
-  margin-top: 42px;
+  margin-top: 2rem;
 }
 
 .containerTitle {
-  padding: 8px;
+  padding: 0.5rem;
 
   background-color: #3d5fe7;
   opacity: 0.8;
@@ -19,16 +19,16 @@
 }
 
 .imgSiren {
-  width: 14px;
-  padding: 0 8px 0;
+  width: 1rem;
+  padding-right: 0.5rem;
 }
 
 .textTitle {
   color: #ffffff;
   font-weight: 400;
-  font-size: 13.5px;
+  font-size: 0.8rem;
 
-  margin-top: 4px;
+  margin-top: 0.25rem;
 }
 
 .containerNoticeList {
