feat: 글 작성 이후 해당 글 페이지로 리다이렉트 / 게시글 목록 페이지에 글쓰기 버튼 렌더링 241120 1441

--- a/scssak-fe/src/styles/pages/ArticleDetailPage.css
+++ b/scssak-fe/src/styles/pages/ArticleDetailPage.css
@@ -49,7 +49,7 @@
 
 .edit-button,
 .delete-button {
-  width: 50px;
+  width: 60px;
   color: white;
   padding: 2px 2px;
   border: none;
@@ -93,8 +93,10 @@ hr.divider {
 /* 구획 3: 첨부된 이미지 스타일 */
 .article-images {
   display: flex;
-  justify-content: center;
   margin: 20px 20px;
+  flex-direction: column; /* 세로로 정렬 */
+  align-items: center; /* 이미지를 가운데 정렬 */
+  gap: 20px; /* 이미지 사이의 간격 */
 }
 
 .article-images img {
