--- a/scssak-fe/src/styles/pages/ArticleBoardPage.css
+++ b/scssak-fe/src/styles/pages/ArticleBoardPage.css
@@ -109,8 +109,10 @@
 }
 
 .write-button {
-  position: fixed;
-  bottom: 16px;
+  position: sticky;
+  bottom: 1vh;
+  left: 50%;
+  transform: translate(-50%, 0);
   padding: 12px 24px;
   border-radius: 24px;
   background-color: #0066ff;
