--- a/scssak-fe/src/styles/pages/ArticleBoardPage.css
+++ b/scssak-fe/src/styles/pages/ArticleBoardPage.css
@@ -2,8 +2,11 @@
   padding: 8px;
   box-sizing: border-box;
   max-width: 100%;
+  height: 92vh;
+  overflow: hidden;
   margin: 0 auto;
   position: relative;
+  background-color: #f2f9ff;
 }
 
 .board-header {
@@ -11,10 +14,15 @@
   align-items: center;
   gap: 8px;
   margin-bottom: 20px;
+  background-color: white;
+  padding: 8px 16px;
+  margin-left: -8px;
+  margin-right: -8px;
+  margin-top: -8px; /* 패딩에 따른 위치 조정 */
 }
 
 .logo-image {
-  width: 50px;
+  width: 60px;
   height: auto;
 }
 
@@ -34,7 +42,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  width: calc(100% - 40px); /* 돋보기 버튼을 제외한 공간에 맞춤 */
   height: 100%;
   box-sizing: border-box;
   border: none;
@@ -49,10 +57,16 @@
   color: #888; /* placeholder 색상 */
 }
 
+/* 검색 버튼 스타일 */
 .search-button {
-  background: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 45px; /* 돋보기 이미지 크기에 맞춤 */
+  height: 40px;
   border: none;
-  font-size: 16px;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 .type-buttons {
@@ -81,7 +95,7 @@
 
 .open-type {
   margin: 8px 0;
-  font-size: 14px;
+  font-size: 20px;
 }
 
 .open-type-item.active {
@@ -93,19 +107,38 @@
 .notice-bar {
   display: flex;
   align-items: center;
-  padding: 8px 15px;
-  margin-top: 15px;
-  background-color: #ffffff; /* 배경 색상 */
-  border: 1px solid #d0e3ff; /* 테두리 색상 */
-  border-radius: 10px;
-  font-size: 12px;
-  color: #555;
+  justify-content: left;
+  gap: 20px;
+  padding: 8px;
+  background-color: #ffffff;
+  border: 1px solid #cfe9ff;
+  border-radius: 8px;
+  margin-bottom: 16px;
+  padding: 12px 16px;
 }
 
-.notice-icon {
-  color: #3d8aff; /* 공지 텍스트 색상 */
-  /* font-weight: bold; */
-  margin-right: 8px;
+.notice-label {
+  color: #4ea4ff;
+}
+
+.notice-message {
+  color: #a6a6a6;
+}
+
+/* 최신순/좋아요순 버튼 스타일 */
+.sort-buttons {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 12px;
+}
+
+.sort-button {
+  cursor: pointer;
+  color: #868686;
+}
+
+.sort-button.active {
+  color: #007bff;
 }
 
 .write-button {
