--- a/scssak-fe/src/styles/components/article/ArticleForm.css
+++ b/scssak-fe/src/styles/components/article/ArticleForm.css
@@ -96,20 +96,49 @@ textarea {
 }
 
 .photo-add-button {
-  width: 40%;
+  width: 150px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   display: inline-block;
+  margin-right: 10px;
 }
 
 .photo-add-button img {
-  width: 100%;
+  width: 150px;
+}
+
+.image-preview-container {
+  display: flex; /* 가로로 나열되도록 설정 */
+  overflow-x: auto; /* 가로 스크롤을 가능하게 설정 */
+  gap: 10px; /* 이미지들 간에 간격 추가 */
+  padding: 20px 0 5px 0; /* 컨테이너 상하단에 패딩 추가 */
+  height: 130px;
+}
+
+.image-preview {
+  position: relative; /* 삭제 버튼을 이미지 위에 위치할 수 있게 함 */
+  height: 100px; /* 이미지의 높이 설정 */
+}
+
+.image-delete-button {
+  position: absolute; /* 절대 위치 설정 */
+  top: -15px; /* 이미지 상단에서 5px 위 */
+  right: 5px; /* 이미지 오른쪽에서 5px 왼쪽 */
+  background: none; /* 기본 버튼 스타일 제거 */
+  border: none; /* 기본 테두리 제거 */
+  cursor: pointer; /* 마우스를 올렸을 때 커서 포인터로 변경 */
+  padding: 0; /* 패딩 제거 */
+}
+
+.image-delete-button img {
+  width: 20px; /* 삭제 아이콘의 크기 설정 */
+  height: 20px; /* 삭제 아이콘의 높이 설정 */
+  object-fit: contain; /* 이미지가 버튼 안에서 잘 맞도록 설정 */
 }
 
 .preview-image {
   margin-top: 10px;
-  width: 100px;
   height: 100px;
   object-fit: cover;
   border-radius: 8px;
