--- a/scssak-fe/src/styles/components/profile/Profile.module.css
+++ b/scssak-fe/src/styles/components/profile/Profile.module.css
@@ -1,6 +1,5 @@
 .container {
   padding: 1rem;
-  max-width: 480px; /* 모바일 웹앱에 맞춘 가로폭 */
   margin: 0 auto;
 
   background-color: #edf0f3;
@@ -25,6 +24,8 @@
 }
 
 .containerInfoText {
+  max-width: 15rem;
+
   text-align: start;
 }
 
