--- a/scssak-fe/src/styles/components/article/ArticleList.css
+++ b/scssak-fe/src/styles/components/article/ArticleList.css
@@ -1,11 +1,11 @@
 .article-list {
   overflow-y: auto;
-  max-height: calc(92vh - 246px); /* 동적 높이 */
+  height: calc(92dvh - 246px); /* 동적 높이 */
 }
 
 .articles {
   list-style: none;
-  padding: 15px 0 0 0;
+  padding: 15px 0;
   margin: 0;
   display: grid;
   grid-template-columns: 1fr;
