--- a/scssak-fe/src/styles/components/profileEdit/ProfileForm.module.css
+++ b/scssak-fe/src/styles/components/profileEdit/ProfileForm.module.css
@@ -39,13 +39,13 @@
 .containerInput > label {
   flex: 1;
 
-  font-size: 1rem;
   text-align: start;
 }
 
 .containerInput > input,
 .containerInput > textarea {
   flex: 2;
+  width: 100%;
 
   margin: 0.5rem 0;
   padding: 0.5rem 0.7rem;
@@ -55,7 +55,6 @@
   border-radius: 10px;
 
   color: #536177;
-  font-family: 'Noto Sans KR';
   font-size: 0.9rem;
 }
 
@@ -64,15 +63,10 @@
   -ms-overflow-style: none;
 }
 
-.containerInput > textarea::-webkit-scrollbar {
-  display: none;
-}
-
 .containerInput > input:disabled {
   background-color: #ffffff;
 
   color: #000000;
-  font-family: 'GmarketSans';
   font-size: 1rem;
 }
 
