--- a/scssak-fe/src/styles/pages/ArticleBoardPage.css
+++ b/scssak-fe/src/styles/pages/ArticleBoardPage.css
@@ -2,7 +2,7 @@
   padding: 8px;
   box-sizing: border-box;
   max-width: 100%;
-  height: 92vh;
+  height: 100%;
   overflow: hidden;
   margin: 0 auto;
   position: relative;
