--- a/scssak-fe/src/styles/pages/LoginPage.module.css
+++ b/scssak-fe/src/styles/pages/LoginPage.module.css
@@ -1,29 +1,30 @@
 .container {
-  min-height: 100vh;
+  height: 100%;
 
   background-color: #f2f9ff;
 
   background-repeat: no-repeat;
   background-size: contain;
   background-position-y: bottom;
+
+  position: relative;
 }
 
 .containerIntroduce {
-  padding-top: 7rem;
+  padding-top: 10dvh;
 }
 
 .containerIntroduce > p {
   margin: 0;
-
   font-family: 'YeongdeokSea';
 }
 
 .imgLogin {
-  height: 15rem;
+  height: 20dvh;
   object-fit: contain;
 
-  margin-top: 3rem;
-  margin-bottom: 2rem;
+  margin-top: 5dvh;
+  margin-bottom: 3dvh;
 }
 
 .textBlue {
@@ -32,22 +33,23 @@
 }
 
 .textGray {
-  padding-top: 0.25rem;
+  padding-top: 0.5dvh;
 
   color: #83aaca;
   font-size: 1.25rem;
 }
 
 .textBlack {
-  padding-top: 2rem;
+  padding-top: 3dvh;
 
   color: #040520;
   font-size: 1.5rem;
 }
 
 .textCopyright {
-  margin: 2rem 0 0;
-
+  position: absolute;
+  bottom: 1dvh;
+  width: 100%;
   color: #ffffff;
   opacity: 0.7;
   font-size: 10px;
