--- a/scssak-fe/src/styles/components/article/ArticleList.css
+++ b/scssak-fe/src/styles/components/article/ArticleList.css
@@ -1,7 +1,7 @@
 .article-list {
   overflow-y: auto;
-  min-height: 100%;
-  max-height: calc(92vh - 246px); /* 동적 높이 */
+  /* min-height: 100%; */
+  height: calc(92dvh - 262px); /* 동적 높이 */
 }
 
 .articles {
