--- a/scssak-fe/src/styles/pages/ArticleBoardPage.css
+++ b/scssak-fe/src/styles/pages/ArticleBoardPage.css
@@ -1,8 +1,8 @@
 .board-page {
-  padding: 8px;
+  padding: 16px;
   box-sizing: border-box;
   max-width: 100%;
-  height: 92vh;
+  height: 100%;
   overflow: hidden;
   margin: 0 auto;
   position: relative;
@@ -33,10 +33,12 @@
   left: 10px;
   width: 100%;
   max-width: 310px; /* 원하는 너비로 조정 */
-  height: 40px; /* 높이도 이미지에 맞게 조정 */
+  aspect-ratio: 31/4;
+  height: auto;
   background-image: url('/src/assets/images/article/search_bar.png'); /* 이미지 경로를 설정 */
-  background-size: contain;
+  background-size: 98%;
   background-position: center;
+  background-repeat: no-repeat;
 }
 
 .search-bar {
