--- a/scssak-fe/src/styles/components/article/ArticleList.css
+++ b/scssak-fe/src/styles/components/article/ArticleList.css
@@ -42,7 +42,7 @@
   object-fit: cover;
 }
 
-.article-info {
+.article-item .article-info {
   flex: 1;
   display: flex;
   flex-direction: column;
