--- a/scssak-fe/src/styles/components/common/Navbar.css
+++ b/scssak-fe/src/styles/components/common/Navbar.css
@@ -3,7 +3,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 8vh;
+  height: 8dvh;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -24,8 +24,7 @@
 
 .nav-item img {
   object-fit: contain;
-  height: 45px;
-  margin-bottom: 4px;
+  height: 6dvh;
 }
 
 .nav-item span {
