--- a/scssak-fe/src/styles/pages/MailboxPage.module.css
+++ b/scssak-fe/src/styles/pages/MailboxPage.module.css
@@ -1,13 +1,16 @@
 .container {
   height: 100%;
 
-  position: relative;
-  overflow: hidden;
-
   background-color: #f2f9ff;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .containerTitle {
+  width: 100%;
+
   position: relative;
 
   padding: 1rem 0;
