--- a/scssak-fe/src/styles/components/common/Navbar.css
+++ b/scssak-fe/src/styles/components/common/Navbar.css
@@ -10,7 +10,8 @@
   background-color: #ffffff;
   border-top: 1px solid #ddd;
   box-shadow: 0 -1px 6px rgba(0, 0, 0, 0.1);
-  z-index: 1000;
+
+  box-sizing: border-box;
 }
 
 .nav-item {
