--- a/scssak-fe/src/styles/pages/ArticleBoardPage.css
+++ b/scssak-fe/src/styles/pages/ArticleBoardPage.css
@@ -1,5 +1,5 @@
 .board-page {
-  padding: 8px 16px 16px 16px;
+  padding: 0 16px;
   box-sizing: border-box;
   max-width: 100%;
   height: 100%;
@@ -146,7 +146,7 @@
 
 .write-button {
   position: sticky;
-  bottom: 1vh;
+  bottom: 3dvh;
   left: 50%;
   transform: translate(-50%, 0);
   padding: 12px 24px;
