--- a/scssak-fe/src/styles/pages/MailboxPage.module.css
+++ b/scssak-fe/src/styles/pages/MailboxPage.module.css
@@ -6,6 +6,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  position: relative;
 }
 
 .containerTitle {
@@ -27,4 +29,14 @@
 
   width: 1.5rem;
   object-fit: contain;
+}
+
+.containerButton {
+  position: absolute;
+  bottom: 4dvh;
+
+  left: 0;
+  width: 100%;
+
+  z-index: 50;
 }
