fix: QA 내용 반영 241121 1752

--- a/scssak-fe/src/styles/components/profile/Profile.module.css
+++ b/scssak-fe/src/styles/components/profile/Profile.module.css
@@ -17,14 +17,14 @@
 }
 
 .imgProfile {
-  width: 8rem;
-  height: 8rem;
+  width: 30%;
+  aspect-ratio: 1/1;
   object-fit: cover;
   border-radius: 50%;
 }
 
 .containerInfoText {
-  max-width: 15rem;
+  width: 50%;
 
   text-align: start;
 }
