--- a/scssak-fe/src/styles/components/profile/ProfileArticleList.module.css
+++ b/scssak-fe/src/styles/components/profile/ProfileArticleList.module.css
@@ -2,7 +2,7 @@
   min-height: 5rem;
 
   margin: 1rem;
-  padding: 1.5rem 1rem 0.5rem;
+  padding: 1.5rem 1rem 1rem;
 
   background-color: #f9f9f9;
   opacity: 0.8;
@@ -43,6 +43,10 @@
   border-top: 1px solid #d8e0ec;
 }
 
+.containerArticleItem:last-child {
+  border-bottom: 1px solid #d8e0ec;
+}
+
 .containerArticleText {
   height: 100%;
 
@@ -62,6 +66,7 @@
 }
 
 .textArticleTitle {
+  width: 100%;
   margin: 0;
 
   color: #536177;
@@ -70,6 +75,10 @@
   font-size: 0.8rem;
 
   text-align: start;
+
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .containerArticleInfo {
