feat: 졸업생 main 추가 241121 2318

--- a/scssak-fe/src/styles/components/main/PopularArticleList.module.css
+++ b/scssak-fe/src/styles/components/main/PopularArticleList.module.css
@@ -15,8 +15,15 @@
   padding-right: 0.5rem;
 }
 
-.textTitle {
+.textTitleRed {
   color: #ff0909;
+  font-weight: 400;
+
+  margin-top: 0.25rem;
+}
+
+.textTitleBlue {
+  color: #3d5fe7;
   font-weight: 400;
 
   margin-top: 0.25rem;
