--- a/scssak-fe/src/styles/components/login/LoginForm.module.css
+++ b/scssak-fe/src/styles/components/login/LoginForm.module.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
 
-  margin-top: 6dvh;
+  padding-top: 7dvh;
 }
 
 .container > * {
@@ -15,9 +15,9 @@
 
 .container > input {
   padding: 6px 16px;
-  margin: 13px 0 0 0;
+  margin: 1dvh 0 0;
 
-  height: 24px;
+  height: 3dvh;
   width: 60%;
   background-color: #f7fbff;
   border: 2px solid #8a92ab;
@@ -33,15 +33,14 @@
 }
 
 .loginButton {
-  height: 36px;
-  padding: 0 16px;
-  margin: 23px;
+  margin-top: 3dvh;
 
-  background-color: #3d5fe7;
+  padding: 6px 24px;
   border-radius: 24px;
-  border: none;
-
-  color: white;
-  font-weight: 400;
+  background-color: #0066ff;
+  color: #fff;
   font-size: 16px;
+  border: none;
+  cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
