--- a/scssak-fe/src/styles/components/profileEdit/ProfileForm.module.css
+++ b/scssak-fe/src/styles/components/profileEdit/ProfileForm.module.css
@@ -72,20 +72,21 @@
 
 .containerButton {
   border-top: 1px solid #d8e0ec;
+  padding: 1.5rem 0 2rem;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .profileEditButton {
-  margin: 1rem;
-  padding: 0.5rem 1.5rem;
-
-  background-color: #3d5fe7;
+  padding: 12px 24px;
+  border-radius: 24px;
+  background-color: #0066ff;
+  color: #fff;
+  font-size: 16px;
   border: none;
-  border-radius: 50px;
-
-  color: #ffffff;
-  font-size: 1.25rem;
-
-  box-shadow:
-    0 4px 4px rgba(0, 0, 0, 0.1),
-    0 4px 4px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
