feat: article 마지막 QA 반영 (게시글 카드에서 내용 3줄 이상 방지, 게시판에서 글쓰기 누르면 현재 선택된 타입으로 작성하도록 Default 조정) 241122 1039

--- a/scssak-fe/src/styles/components/article/ArticleList.css
+++ b/scssak-fe/src/styles/components/article/ArticleList.css
@@ -27,6 +27,13 @@
   min-height: 120px; /* 카드 높이 설정 (필요에 따라 조정) */
 }
 
+.article-info .content {
+  display: -webkit-box; /* flexbox 형식의 블록 컨테이너 */
+  -webkit-box-orient: vertical; /* 수직 방향으로 배치 */
+  -webkit-line-clamp: 2; /* 최대 2줄까지만 표시 */
+  overflow: hidden; /* 넘치는 텍스트는 숨기기 */
+}
+
 .thumbnail {
   width: 120px;
   height: 90px;
